# homeHAB

./: .env.dev  .env.prod.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  TODO.md  TODOS.md  business_description.MD  deploy.sh  docker-compose.yml  generate_elements.md  pom.xml
cloudflare/: config.yml  nginx-landing.conf
docs/: CLOUDFLARE-TUNNEL.md  HRV-FUTURE-EXTENSIONS.md  INSTALLATION.md  MAIN-UI-PAGES.md  MQTT.md  PWM-CALIBRATION.md  RPI-WIRING.md  schema.txt
esp32-panel/: README.md  deploy-panel.sh  hrv-panel-host.yaml  hrv-panel.yaml  mqtt-simulator.py  secrets.yaml.example
esp32-panel/design/: rekuperace_panel.html  rekuperace_panel_simple.html
esp32/panel/: ota-flash.sh  partitions.csv  sdkconfig.defaults
esp32/panel/main/: CMakeLists.txt  font_cz_12.c  font_cz_16.c  font_cz_22.c  image_fetch.c  image_fetch.h  main.c  namedays.c  namedays.h  screen_forecast.c  screen_forecast.h  weather.c  weather.h  weather_icons.c  weather_icons.h
esp32/sct013/: README.md  deploy.sh  platformio.ini
nginx/: default.conf  homehab.conf
openhab-dev/: README.md
openhab-dev/conf/: hrv-zigbee-mapping.yaml  (+1 more)
scripts/: common.sh  deploy-all.sh  deploy-build.sh  deploy-configs.sh  deploy-docker.sh  deploy-generator.sh  deploy-jar.sh  deploy-openhab-prod.sh  deploy-panel.sh  deploy-python-bridge.sh  deploy-restart.sh  deploy-ui-pages.sh  deploy-weather-service.sh  generate-all-config.sh  generate-hrv-config.py  generate-input-items.py  generate-output-items.py  generate-zigbee-config.py
src/main/python/: Dockerfile  README.md  dac-bridge.service  deploy-dac-bridge.sh  pyproject.toml  requirements.txt
src/main/python/dac_bridge/: __init__.py  current_sensor.py  pwm_calibration.py  waveshare_ads1256.py  waveshare_dac8532.py
src/main/python/dac_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/main/python/hrv_bridge/: README.md  __init__.py  co2_sensor.py
src/main/python/mqtt_simulator/: README.md  devices.yaml  simulator.py
src/main/python/weather_service/: Dockerfile  README.md  pyproject.toml
src/main/python/weather_service/weather_service/: __init__.py  chart_renderer.py  fetcher.py  http_server.py  influx_writer.py  mqtt_publisher.py
systemd/: cloudflared.service  dac-bridge.service  weather-service.service
(+109 files in other folders)
